# qtdatabase

./: CMakeLists.txt  CMakePresets.json  README.md  databaseutil.h  datatable.cpp  datatable.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  querytablemodel.cpp  querytablemodel.h  settings.cpp  settings.h
